[gd_scene load_steps=3 format=3 uid="uid://hdgt7r6w4gub"]

[ext_resource type="Theme" uid="uid://8j076bs8jafv" path="res://assets/other/default_theme.tres" id="1_h0r5j"]
[ext_resource type="Script" uid="uid://dx2ajbft27u0q" path="res://content/gui/level_info.gd" id="1_m7733"]

[node name="LevelInfo" type="CenterContainer"]
offset_right = 320.0
offset_bottom = 192.0
theme = ExtResource("1_h0r5j")
script = ExtResource("1_m7733")

[node name="Timer" type="Timer" parent="."]

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 14

[node name="TitleLable" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Name Here"

[node name="LevelLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "Level 0"
horizontal_alignment = 1

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
